// +bili:type=service
// Code generated by warden.
syntax = "proto3";

package push.service.broadcast.model;

option go_package = "model";

message Proto {
    int32 ver = 1;
    int32 operation = 2;
    int32 seqId = 3;
    int32 compress = 4;
    int32 contentType = 5;
    bytes body = 6;
}
